# VidyaSetu

./: .env.example  .gitignore  MIGRATION_RBAC.md  PROJECT_STATUS.md  QUICKSTART_RBAC.md  RBAC_IMPLEMENTATION.md  README.md  SRC_STRUCTURE.md  TESTING.md  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prisma.config.ts  scan.py  scratch.mjs  tailwind.config.ts  test-next-cookies.mjs  test.css  vitest.config.ts
.github/workflows/: ci.yml  security.yml  vercel-production.yml
docs/: AI_BACKEND_ARCHITECTURE.md  AI_SCHEMA_OWNERSHIP.md  ARCHITECTURE.md
seed-data/learner-md/: README.md
services/ai/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  openapi.golden.json  pyproject.toml
services/ai/scripts/: export-openapi.py
services/ai/src/vidyasetu_ai/: __init__.py  main.py
services/ai/src/vidyasetu_ai/api/: router.py
services/ai/src/vidyasetu_ai/api/routes/: health.py
services/ai/src/vidyasetu_ai/core/: config.py  model_registry.py  security.py
services/ai/src/vidyasetu_ai/db/: database.py  models.py
services/ai/src/vidyasetu_ai/db/migrations/: env.py
services/ai/src/vidyasetu_ai/db/migrations/versions/: 001_enable_pgvector_and_ai_tables.py
services/ai/src/vidyasetu_ai/schemas/: __init__.py  health.py  quiz.py
services/ai/tests/: conftest.py  test_health.py  test_model_registry.py  test_quiz_validation.py  test_schema.py  test_security.py
src/: .gitignore  SRC_STRUCTURE.md  middleware.ts  proxy.ts  test_cookies.js
src/__tests__/: contract.test.ts
src/app/: globals.css  (+3 more)
(+838 files in other folders)
